# chanlunStockAnalysis

./: .gitignore  CHANGELOG.md  SKILL.md  pyproject.toml  requirements.txt  setup.py
docs/: local-analysis.md
docs/superpowers/plans/: 2026-06-25-chan-trading-signals.md  2026-06-26-buy-veto-conditions.md  2026-06-26-signal-backtest-validation.md  2026-06-26-standard-chan-structure.md  2026-06-26-volume-turnover-confirmation.md  2026-06-27-web-workbench-enhancement.md  2026-06-30-backtest-dashboard-layered-validation.md
docs/superpowers/specs/: 2026-06-25-chan-trading-signals-design.md  2026-06-26-buy-veto-conditions-design.md  2026-06-26-signal-backtest-validation-design.md  2026-06-26-standard-chan-structure-design.md  2026-06-26-volume-turnover-confirmation-design.md  2026-06-27-web-workbench-enhancement-design.md  2026-06-30-backtest-dashboard-layered-validation-design.md
examples/: holdings.sample.csv
src/astockdata/: __init__.py  analysis.py  backtest.py  chan.py  chan_cli.py  chan_points.py  cli.py  eastmoney.py  kline.py  market_context.py  models.py  resolver.py  signals.py  symbols.py  technical_context.py  tencent.py  veto.py  volume_context.py  web.py  web_static.py
tests/: test_analysis.py  test_backtest.py  test_chan.py  test_chan_cli.py  test_chan_points.py  test_cli.py  test_eastmoney.py  test_kline.py  test_market_context.py  test_resolver.py  test_signals.py  test_symbols.py  test_technical_context.py  test_tencent.py  test_veto.py  test_volume_context.py  test_web.py
